# s-modem

./: .gitignore  .gitmodules  Makefile  README.md
soapy/: CMakeLists.txt  arb.json  ben_problem.json  find_higgs_driver.cmake  find_zmq.cmake  higgs_driver.cmake  init.json  init_tx.json  integration.json  lte_rx.json  modem.cmake  node_example.csv  test_libevent.cmake  unit_test.cmake
soapy/config/: patch_example.json  rx.json  tx.json
soapy/const_parser/: const_parser.js  package-lock.json  package.json
soapy/js/: .gitignore  Makefile  README.md  binding.gyp  package-lock.json  package.json
soapy/js/cpp/: CoarseChain.cpp  FFTChain.cpp  README.md  RxChain1.cpp  TurnstileChain.cpp  TxChain1.cpp  examplechain.cpp
soapy/js/examples/: bar.js  bas.js  bob.js  boop.js  bran.js  can.js  car.js  cast.js  cert.js  climb.js  cone.js  custard.js  dag.js  debugcap.js  den.js  den2.js  den3.js  did.js  dumppacket.js  grc_js.js  threadedfft.js
soapy/js/helper/: Makefile  README.md  generate.js
soapy/js/integration/: test_cs20_eq.js  test_smodem_coarse.js  test_smodem_inject.js  test_smodem_loop.js  test_smodem_pair.js  test_smodem_slow2.js  test_smodem_slowdown.js  test_smodem_start_stop.js  test_smodem_txmode.js
soapy/js/mock/: README.md  coarsesync.js  convert_fsmmacros.js  cooked_data_unrotated.js  estimators.js  fbparse.js  fbtag.js  gplot.js  hconst.js  launcherclient.js  launcherserver.js  mapmov.js  mockall.js  mockenvironment.js  mockenvironmentpair.js  mockhiggs.js  mockhiggssocket.js  mockschedule.js  mockutils.js  nplot.js  nullbuffersplit.js  parsedashtie.js  pipetypecheck.js  proxyarray.js  ratekeep.js  streamers.js  typebank.js  workkeeper.js  wrapnativestream.js
soapy/js/runtime/: runtime_core.js  runtime_rx.js  runtime_tx.js
soapy/js/test/: test_coarse.js  test_estimators.js  test_fbcrash.js  test_fbparse.js  test_fbtag.js  test_mapmov.js  test_mockenvironment.js  test_mockenvironmentpair.js  test_mockschedule.js  test_mutil.js  test_native_chains.js  test_native_coarse.js  test_native_fft.js  test_native_rxchain1.js  test_native_txchain.js  test_nullbuffersplit.js  test_parsedashtie.js  test_proxyarray.js  test_ratekeep.js  test_rx_chain.js  test_slice.js  test_streamers.js  test_typebank.js  test_workkeeper.js
soapy/jsonrpc/: Makefile  README.md  spec.json
soapy/productionjs/: .gitignore  CMakeLists.txt  Makefile  arb.js  catcher.js  corrupt_fb_1.js  devel_hw.js  modem_main.js  package-lock.json  package.json  readback.js  sender.js  uart.js  verify_feedback_bus.js
soapy/productionjs/jsinc/: arb_behavior.js  arb_behavior2.js  calc_evm.js  catch_custom_event.js  database_store.js  dispatch_ringbus.js  eq_readback.js  fixed_schedule.js  grav3_ctrl.js  grav3_uart.js  handle_duplex.js  handle_feedback_bus_recovery.js  handle_masks.js  handle_ook.js  handle_power.js  handle_self_sync.js  handle_zmq.js  inject_offboard.js  listen_grc_port.js  listen_udp.js  radio_estimate.js  rx_behavior.js  schedule.js  send_udp.js  setup_hardware.js  torture_feedback_bus.js  tx_behavior.js  txrx_shared_behavior.js  wrap_db.js  wrap_native.js
soapy/python/: test_some_python.py
soapy/src/: discovery_client.cpp  discovery_server.cpp  modem_floats.cpp  modem_main.cpp  side_control.cpp  test_libevent.cpp  test_libevent_example.cpp  test_zmq.cpp
soapy/src/bindjs/: BindAirInstanced.hpp  BindAirPacket.cpp  BindAirPacket.hpp  BindCommonInclude.hpp  BindCustomEvent.cpp  BindCustomEvent.hpp  BindData.cpp  BindData.hpp  BindDemodThread.cpp  BindDemodThread.hpp  BindEVMThread.cpp  BindEVMThread.hpp  BindEventDsp.cpp  BindEventDsp.hpp  BindFlushHiggs.cpp  BindFlushHiggs.hpp  BindHiggsDriver.cpp  BindHiggsDriver.hpp  BindHiggsInclude.hpp  BindHiggsSNR.cpp  BindHiggsSNR.hpp  BindJs.cpp  BindRadioEstimate.cpp  BindRadioEstimate.hpp  BindSchedule.cpp  BindSchedule.hpp  BindSettings.cpp  BindSettings.hpp  BindTxSchedule.cpp  BindTxSchedule.hpp  CToJavascript.hpp
soapy/src/common/: CmdRunner.cpp  CounterHelper.cpp  CounterHelper.hpp  DataVectors.cpp  DataVectors.hpp  GenericOperator.cpp  GenericOperator.hpp  NullBufferSplit.cpp  NullBufferSplit.hpp  ParseReveal.cpp  ParseReveal.hpp  ReadbackHash.cpp  ReadbackHash.hpp  SafeQueue.hpp  constants.hpp  convert.cpp  convert.hpp  cplx.cpp  cplx.hpp  crc32.cpp  crc32.hpp  discovery.cpp  discovery.hpp  utilities.cpp  utilities.hpp
soapy/src/data/: README.md  airpacket18.cpp  datapacket0.hex  demodpacket0.cpp  demodpacket1.cpp  eq_vectors_0.json  interleaver_trouble_1.hex  packet_vectors.hpp  rs_packet_0.hex  slicedpacket18.hex  slicedpacket20.hex  slicedpacket21.hex
soapy/src/driver/: AirMacBitrate.cpp  AirMacBitrate.hpp  AirMacInterface.hpp  AirPacket.cpp  AirPacket.hpp  AttachedEstimate.cpp  AttachedEstimate.hpp  BoostIOThread.cpp  BoostTcpClient.cpp  BoostTcpClient.hpp  CustomEventTypes.hpp  DashTie.cpp  DashTie.hpp  DemodThread.cpp  DemodThread.hpp  DispatchMockRpc.cpp  DispatchMockRpc.hpp  EVMThread.cpp  EVMThread.hpp  EmulateMapmov.cpp  EmulateMapmov.hpp  EventDsp.cpp  EventDsp.hpp  EventDspArbiter.cpp  EventDspDash.cpp  EventDspFetch.cpp  EventDspFsm.cpp  EventDspFsmStates.hpp  EventDspFsmTx.cpp  FlushHiggs.cpp  FlushHiggs.hpp  FsmMacros.hpp  HiggsDriverSharedInclude.hpp  HiggsEvent.cpp  HiggsEvent.hpp  HiggsFineSync.cpp  HiggsFineSync.hpp  HiggsPartner.cpp  HiggsRing.cpp  HiggsRing.hpp  (+43 more)
soapy/src/test/: README.md  fix_vertical_demod.hpp  fix_vertical_demod_2.hpp  fix_vertical_demod_3.hpp  test_air.cpp  test_air_packet_1.cpp  test_air_packet_10.cpp  test_air_packet_2.cpp  test_air_packet_3.cpp  test_air_packet_4.cpp  test_air_packet_5.cpp  test_air_packet_6.cpp  test_air_packet_7.cpp  test_air_packet_8.cpp  test_air_packet_9.cpp  test_air_qam16.cpp  test_air_qam16_2.cpp  test_circular_buffer_pow2.cpp  test_client.cpp  test_client_duplex.cpp  test_client_duplex_rx.cpp  test_client_loopback.cpp  test_cmd.cpp  test_convert.cpp  test_convert_2.cpp  test_convert_3.cpp  test_cplx_1.cpp  test_csocket.cpp  test_demod_thread.cpp  test_demod_thread_1.cpp  test_duplex_1.cpp  test_duplex_2.cpp  test_duplex_mode.cpp  test_eigen.cpp  test_fec.cpp  (+27 more)
(+129 files in other folders)
